Update documentation and Taskfile for /v1 API versioning
- Update all README examples to use /auth/v1/* endpoints via Traefik
- Add both standalone (localhost:8084) and Traefik (localhost:81) examples
- Fix Taskfile docker-stop command to use 'docker stop' instead of docker-compose
- Standardize with /v1 versioning across all auth endpoints

Ensures consistency with other microservices API versioning

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -37,9 +37,9 @@ tasks:
       - docker-compose up -d
 
   docker-stop:
-    desc: Stop docker-compose services
+    desc: Stop auth-service container
     cmds:
-      - docker-compose down
+      - docker stop auth-service
 
   docker-logs:
     desc: View auth service logs
