Require all configuration via environment variables
- Remove hardcoded fallback values from config
- Add getEnvRequired() function for mandatory configuration
- Update .env.example with Docker service names
- Add .dockerignore for optimized builds

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Database
+# For local development: localhost
+# For Docker: postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=portfolio_user
@@ -6,6 +8,8 @@ DB_PASSWORD=portfolio_pass
 DB_NAME=portfolio
 
 # Redis
+# For local development: localhost
+# For Docker: redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
