Change renovate schedule to create PRs immediately

--- a/renovate.json
+++ b/renovate.json
@@ -10,10 +10,9 @@
     ":automergeMinor",
     ":label(go)"
   ],
+  "prCreation": "immediate",
   "timezone": "Europe/Riga",
-  "schedule": [
-    "before 6am on monday"
-  ],
+  "schedule": [],
   "packageRules": [
     {
       "matchManagers": [
