--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 # For Docker: postgres
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=portfolio_user
-DB_PASSWORD=portfolio_pass
+DB_USER=portfolio_admin
+DB_PASSWORD=portfolio_admin_dev_pass
 DB_NAME=portfolio
 
 # Redis
