--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,18 @@ on:
 
 env:
   GO_VERSION: '1.25.2'
+  # Action versions - update in one place
+  ACTIONS_CHECKOUT: 'actions/checkout@v5.0.0'
+  ACTIONS_SETUP_GO: 'actions/setup-go@v6.0.0'
+  ACTIONS_UPLOAD_ARTIFACT: 'actions/upload-artifact@v4.6.2'
+  GOLANGCI_LINT_ACTION: 'golangci/golangci-lint-action@v8.0.0'
+  GOLANGCI_LINT_VERSION: 'v2.5.0'
+  CODECOV_ACTION: 'codecov/codecov-action@v5.5.1'
+  DOCKER_SETUP_BUILDX: 'docker/setup-buildx-action@v3.11.1'
+  DOCKER_BUILD_PUSH: 'docker/build-push-action@v6.18.0'
+  AQUASECURITY_TRIVY: 'aquasecurity/trivy-action@0.33.1'
+  GITHUB_CODEQL_UPLOAD: 'github/codeql-action/upload-sarif@v3.28.6'
+  SECUREGO_GOSEC: 'securego/gosec@v2.22.10'
 
 jobs:
   # Job 1: Lint Go code
@@ -29,18 +41,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: ${{ env.ACTIONS_CHECKOUT }}
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: ${{ env.ACTIONS_SETUP_GO }}
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: ${{ env.GOLANGCI_LINT_ACTION }}
         with:
-          version: v2.4.0
+          version: ${{ env.GOLANGCI_LINT_VERSION }}
           args: --timeout=5m --verbose
           # Only show new issues on PRs
           only-new-issues: ${{ github.event_name == 'pull_request' }}
@@ -51,10 +63,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: ${{ env.ACTIONS_CHECKOUT }}
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: ${{ env.ACTIONS_SETUP_GO }}
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
@@ -69,7 +81,7 @@ jobs:
         run: go tool cover -html=coverage.out -o coverage.html
 
       - name: Upload coverage to Codecov (optional)
-        uses: codecov/codecov-action@v4
+        uses: ${{ env.CODECOV_ACTION }}
         if: github.event_name == 'push'
         with:
           file: ./coverage.out
@@ -77,7 +89,7 @@ jobs:
         continue-on-error: true
 
       - name: Upload coverage artifact
-        uses: actions/upload-artifact@v4
+        uses: ${{ env.ACTIONS_UPLOAD_ARTIFACT }}
         with:
           name: coverage-report
           path: coverage.html
@@ -89,10 +101,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: ${{ env.ACTIONS_CHECKOUT }}
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: ${{ env.ACTIONS_SETUP_GO }}
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
@@ -112,13 +124,13 @@ jobs:
       security-events: write # For GitHub Security tab
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: ${{ env.ACTIONS_CHECKOUT }}
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: ${{ env.DOCKER_SETUP_BUILDX }}
 
       - name: Build Docker image
-        uses: docker/build-push-action@v6
+        uses: ${{ env.DOCKER_BUILD_PUSH }}
         with:
           context: .
           push: false
@@ -128,7 +140,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
+        uses: ${{ env.AQUASECURITY_TRIVY }}
         with:
           image-ref: auth-service:${{ github.sha }}
           format: 'sarif'
@@ -137,13 +149,13 @@ jobs:
           exit-code: '1' # Fail on CRITICAL/HIGH vulnerabilities
 
       - name: Upload Trivy results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: ${{ env.GITHUB_CODEQL_UPLOAD }}
         if: always() # Upload even if scan fails
         with:
           sarif_file: 'trivy-results.sarif'
 
       - name: Run Trivy vulnerability scanner (table output)
-        uses: aquasecurity/trivy-action@master
+        uses: ${{ env.AQUASECURITY_TRIVY }}
         if: always()
         with:
           image-ref: auth-service:${{ github.sha }}
@@ -156,21 +168,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: ${{ env.ACTIONS_CHECKOUT }}
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: ${{ env.ACTIONS_SETUP_GO }}
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
 
       - name: Run gosec Security Scanner
-        uses: securego/gosec@master
+        uses: ${{ env.SECUREGO_GOSEC }}
         with:
           args: '-fmt sarif -out gosec-results.sarif ./...'
 
       - name: Upload gosec results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: ${{ env.GITHUB_CODEQL_UPLOAD }}
         if: always()
         with:
           sarif_file: 'gosec-results.sarif'
@@ -181,10 +193,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: ${{ env.ACTIONS_CHECKOUT }}
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: ${{ env.ACTIONS_SETUP_GO }}
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
