--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,53 +1,31 @@
+version: 2
+
 run:
   timeout: 5m
   go: '1.25'
-  tests: true
-  modules-download-mode: readonly
-  allow-parallel-runners: true
-  build-tags: []
-
-output:
-  formats:
-    colored-line-number:
-      path: stdout
-  print-issued-lines: true
-  print-linter-name: true
-  sort-results: true
 
 linters:
   enable:
-    # Enabled by default
-    - errcheck      # Check for unchecked errors
-    - gosimple      # Simplify code
-    - govet         # Vet examines Go source code
-    - ineffassign   # Detect ineffectual assignments
-    - staticcheck   # Advanced Go linter
-    - unused        # Check for unused code
-
-    # Additional recommended linters
-    - bodyclose     # Check HTTP response body is closed
-    - dupl          # Code clone detection
-    - gochecknoinits # Check there are no init functions
-    - gocognit      # Compute cognitive complexities
-    - goconst       # Find repeated strings that could be constants
-    - gocritic      # Comprehensive Go linter
-    - gocyclo       # Compute cyclomatic complexities
-    - gofmt         # Check code is formatted
-    - goimports     # Check imports are formatted
-    - gosec         # Security checks
-    - misspell      # Find commonly misspelled words
-    - prealloc      # Find slice declarations that could be preallocated
-    - revive        # Fast, configurable, extensible, flexible linter
-    - unconvert     # Remove unnecessary type conversions
-    - unparam       # Find unused function parameters
-    - whitespace    # Check for unnecessary whitespace
-
-    # Error handling
-    - errorlint     # Find misuses of errors
-    - errname       # Check error naming conventions
-
-    # Performance
-    - nolintlint    # Ill-formed or insufficient nolint directives
+    - errcheck
+    - govet
+    - ineffassign
+    - staticcheck
+    - unused
+    - bodyclose
+    - dupl
+    - gocognit
+    - goconst
+    - gocritic
+    - gocyclo
+    - gosec
+    - misspell
+    - prealloc
+    - revive
+    - unconvert
+    - unparam
+    - whitespace
+    - errorlint
+    - errname
 
 linters-settings:
   errcheck:
@@ -57,8 +35,8 @@ linters-settings:
   govet:
     enable-all: true
     disable:
-      - shadow # Too strict for some use cases
-      - fieldalignment # Micro-optimization, not critical
+      - shadow
+      - fieldalignment
 
   gocyclo:
     min-complexity: 15
@@ -79,22 +57,15 @@ linters-settings:
   revive:
     rules:
       - name: exported
-        disabled: false
       - name: package-comments
-        disabled: false
       - name: var-naming
-        disabled: false
 
   gosec:
     excludes:
-      - G404 # Weak random number generator - allow for non-crypto usage
-    config:
-      G101: # Look for hardcoded credentials
-        pattern: "(?i)(password|secret|token|apikey|api_key)"
+      - G404
 
 issues:
   exclude-rules:
-    # Exclude some linters from running on tests files
     - path: _test\.go
       linters:
         - gocyclo
@@ -103,18 +74,5 @@ issues:
         - gosec
         - goconst
 
-    # Exclude known false positives
-    - text: "weak cryptographic primitive"
-      linters:
-        - gosec
-      path: _test\.go
-
-    # Allow embedding in migrations or generated code
-    - path: migrations/
-      linters:
-        - goconst
-        - gochecknoinits
-
   max-issues-per-linter: 0
   max-same-issues: 0
-  new: false
