--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -106,7 +106,7 @@ tasks:
   install-tools:
     desc: Install development and CI tools
     cmds:
-      - go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+      - go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v2.5.0
       - go install golang.org/x/vuln/cmd/govulncheck@latest
       - go install github.com/securego/gosec/v2/cmd/gosec@latest
       - go install golang.org/x/tools/cmd/goimports@latest
