--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,4 @@
-version: 2
-
-run:
-  timeout: 5m
-  go: '1.25'
+version: "2"
 
 linters:
   enable:
@@ -27,52 +23,6 @@ linters:
     - errorlint
     - errname
 
-linters-settings:
-  errcheck:
-    check-type-assertions: true
-    check-blank: true
-
-  govet:
-    enable-all: true
-    disable:
-      - shadow
-      - fieldalignment
-
-  gocyclo:
-    min-complexity: 15
-
-  gocognit:
-    min-complexity: 20
-
-  dupl:
-    threshold: 100
-
-  goconst:
-    min-len: 3
-    min-occurrences: 3
-
-  misspell:
-    locale: US
-
-  revive:
-    rules:
-      - name: exported
-      - name: package-comments
-      - name: var-naming
-
-  gosec:
-    excludes:
-      - G404
-
-issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - gocyclo
-        - errcheck
-        - dupl
-        - gosec
-        - goconst
-
-  max-issues-per-linter: 0
-  max-same-issues: 0
+run:
+  timeout: 5m
+  go: '1.25'
