--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,28 +1,43 @@
 version: "2"
-
+run:
+  tests: true
 linters:
   enable:
-    - errcheck
-    - govet
-    - ineffassign
-    - staticcheck
-    - unused
     - bodyclose
-    - dupl
-    - gocognit
-    - goconst
-    - gocritic
-    - gocyclo
     - gosec
     - misspell
-    - prealloc
     - revive
     - unconvert
-    - unparam
-    - whitespace
-    - errorlint
-    - errname
-
-run:
-  timeout: 5m
-  go: '1.25'
+  settings:
+    revive:
+      rules:
+        - name: exported
+          disabled: true
+        - name: package-comments
+          disabled: true
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - lll
+        path: (.+)\.go
+        text: comment
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
