Update readme with badges, add codecov token

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
         uses: codecov/codecov-action@v5.5.1
         if: github.event_name == 'push'
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.out
           fail_ci_if_error: false # Don't fail if codecov is unavailable
         continue-on-error: true
