--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ JWT_REFRESH_EXPIRY=168h
 
 # Server
 PORT=8084
+ENVIRONMENT=development
+
+# Logging
+LOG_LEVEL=info
+LOG_FORMAT=json
+LOG_SOURCE=false
