--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -119,9 +119,15 @@ tasks:
     cmds:
       - govulncheck ./...
 
+  # Linting
+  lint:markdown:
+    desc: Lint Markdown files
+    cmds:
+      - npx markdownlint-cli2
+
   # CI/CD
   ci:all:
-    desc: Run all CI checks (format, lint, vet, test, vuln)
+    desc: Run all CI checks (format, tidy, lint, vet, test, vuln, lint:markdown)
     cmds:
       - task: format
       - task: tidy
@@ -129,4 +135,5 @@ tasks:
       - task: vet
       - task: test
       - task: security:vuln
-      - echo "✓ All CI checks passed!"
+      - task: lint:markdown
+      - echo "All CI checks passed!"
