Add Redis authentication support

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DB_NAME=portfolio
 # For Docker: redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=redis_dev_pass
 
 # JWT
 JWT_SECRET=your-secret-key-change-in-production
