Decouple TLS from password and use ENVIRONMENT variable

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,9 @@ DB_NAME=portfolio
 # For Docker: redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=redis_dev_pass
+# Redis password (optional - leave empty for no authentication)
+# IMPORTANT: Use strong passwords in production
+REDIS_PASSWORD=
 
 # JWT
 JWT_SECRET=your-secret-key-change-in-production
