--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ JWT_REFRESH_EXPIRY=168h
 
 # Server
 PORT=8084
+# Environment: development, staging, or production
 ENVIRONMENT=development
 
 # Logging
