Add Redis authentication support (#22)
* Add Redis authentication support

* Fix Redis authentication configuration issues

* Decouple TLS from password and use ENVIRONMENT variable

* Add config validations, update readme

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ DB_NAME=portfolio
 # For Docker: redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
+# Redis password (optional - leave empty for no authentication)
+# IMPORTANT: Use strong passwords in production
+REDIS_PASSWORD=
 
 # JWT
 JWT_SECRET=your-secret-key-change-in-production
@@ -20,6 +23,7 @@ JWT_REFRESH_EXPIRY=168h
 
 # Server
 PORT=8084
+# Environment: development, staging, or production
 ENVIRONMENT=development
 
 # Logging
