--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,7 +168,24 @@ jobs:
         with:
           sarif_file: 'gosec-results.sarif'
 
-  # Job 6: Check for common issues
+  # Job 6: Secret scanning with TruffleHog
+  secret-scan:
+    name: Secret Scanning
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0 # Full history for scanning
+
+      - name: Run TruffleHog
+        uses: trufflesecurity/trufflehog@main
+        with:
+          path: ./
+          base: ""
+          head: ${{ github.ref }}
+
+  # Job 7: Check for common issues
   code-quality:
     name: Code Quality Checks
     runs-on: ubuntu-latest
@@ -204,7 +221,7 @@ jobs:
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [lint, test, vulnerability-scan, docker-build-and-scan, security-analysis, code-quality]
+    needs: [lint, test, vulnerability-scan, docker-build-and-scan, security-analysis, secret-scan, code-quality]
     if: always()
     steps:
       - name: Check all jobs status
