--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ DB_PORT=5432
 DB_USER=portfolio_admin
 DB_PASSWORD=portfolio_admin_dev_pass
 DB_NAME=portfolio
+# SSL Mode: disable (local), require (AWS RDS), verify-ca, verify-full
+# Valid values: disable, allow, prefer, require, verify-ca, verify-full
+DB_SSLMODE=disable
 
 # Redis
 # For local development: localhost
