--- a/.env.example
+++ b/.env.example
@@ -88,6 +88,13 @@ COOKIE_SECURE=false
 #   - None: Allow cross-site (requires COOKIE_SECURE=true)
 COOKIE_SAMESITE=Lax
 
+# COOKIE_REFRESH_PATH: Path for refresh token cookie
+# Must match the refresh endpoint URL as seen by the browser.
+# This limits refresh token exposure - it's only sent to the refresh endpoint.
+#   - Development (Traefik): /auth/v1/refresh
+#   - Production (direct): /api/v1/auth/refresh
+COOKIE_REFRESH_PATH=/auth/v1/refresh
+
 # ============================================================================
 # SERVER CONFIGURATION
 # ============================================================================
