Add gomodTidy to renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -45,5 +45,6 @@
   ],
   "prHourlyLimit": 5,
   "prConcurrentLimit": 10,
-  "rebaseWhen": "behind-base-branch"
+  "rebaseWhen": "behind-base-branch",
+  "postUpdateOptions": ["gomodTidy"]
 }
